replaced get(0) with getFirst